force-app/main/default/objects/inspire1__Sprint__c/inspire1__Sprint__c.object-meta.xml
<CustomObject>
    <label>Sprint</label>
    <nameField>
        <label>Sprint Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>