force-app/main/default/objects/inspire1__Sprint__c/fields/inspire1__Duration__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Duration__c</fullName>
    <description>Defines duration of Sprint or timebox.</description>
    <inlineHelpText>Define duration of Sprint or timebox.</inlineHelpText>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>3 Weeks</fullName>
            </value>
            <value>
                <fullName>4 Weeks</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>