force-app/main/default/objects/inspire1__Sprint__c/fields/inspire1__Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Finish_Date__c</fullName>
    <description>Defines the finish of the Sprint or timebox.</description>
    <label>Finish Date</label>
    <type>DateTime</type>
</CustomField>