force-app/main/default/objects/inspire1__Sprint__c/fields/inspire1__Max_Planned_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Max_Planned_Effort__c</fullName>
    <label>Max Planned Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>