force-app/main/default/objects/inspire1__Sprint__c/fields/inspire1__Max_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Max_Story_Points__c</fullName>
    <label>Max Story Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>