force-app/main/default/objects/inspire1__Sprint__c/fields/inspire1__Sprint_Goal__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Sprint_Goal__c</fullName>
    <description>Captures the goal of the Sprint.</description>
    <label>Sprint Goal</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>