force-app/main/default/objects/inspire1__Sprint__c/fields/inspire1__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Start_Date__c</fullName>
    <description>Defines the start of the Sprint or timebox.</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>