force-app/main/default/objects/inspire1__Sprint__c/fields/inspire1__sysChartsData__c.field-meta.xml
<CustomField>
    <fullName>inspire1__sysChartsData__c</fullName>
    <label>sysChartsData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>