force-app/main/default/objects/inspire1__Sprint__c/listViews/inspire1__All.listView-meta.xml
<ListView>
    <fullName>inspire1__All</fullName>
    <columns>NAME</columns>
    <columns>inspire1__Project__c</columns>
    <columns>inspire1__Start_Date__c</columns>
    <columns>inspire1__Finish_Date__c</columns>
    <columns>inspire1__Completed__c</columns>
    <columns>inspire1__Duration__c</columns>
    <columns>inspire1__Max_Story_Points__c</columns>
    <columns>inspire1__Sprint_Goal__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>